<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.silvanadorantes.postresfitness.DetailActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add"
        android:orderInCategory="1"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="2"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>

</menu>