<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.silvanadorantes.postresfitness.DetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <!--Card Descripcion-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="0.01dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp">
                    <TextView
                        android:id="@+id/nombre_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nombre"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                    <TextView
                        android:id="@+id/descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="descripcion"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:textSize="15sp"
                        android:textColor="@color/text_normal"/>
                    <TextView
                        android:id="@+id/descripcion_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description_detail"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="11sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Card Ingredientes -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="0.01dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp">


                    <TextView
                        android:id="@+id/ingredientes_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredientes"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="11sp"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Card Preparacion -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="0.01dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp">

                    <TextView
                        android:id="@+id/preparacion_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/preparacion"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="11sp"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbarlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

        <android.support.v7.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.AppBarOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="@dimen/size_fab"
        android:layout_height="@dimen/size_fab"
        android:layout_marginTop="@dimen/fab_elevation"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_shopping_basket_white_24dp"
        app:borderWidth="0dp"
        app:elevation="@dimen/fab_elevation"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
